Added WebGL to build settings

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,6 +18,7 @@ jobs:
           - StandaloneOSX
           - StandaloneWindows64
           - StandaloneLinux64
+          - WebGL
     steps:
       - name: Checkout
         uses: actions/checkout@v2
