Enable webgl with GH pages

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,6 +18,7 @@ jobs:
           - StandaloneOSX
           - StandaloneWindows64
           - StandaloneLinux64
+          - WebGL
     steps:
       - name: Checkout
         uses: actions/checkout@v2
@@ -39,3 +40,11 @@ jobs:
         with:
           name: Bullet Game - ${{ matrix.targetPlatform }}
           path: build
+      - name: Deploy to GitHub Pages
+        if: ${{ matrix.targetPlatform == 'WebGL' && success() }}
+        uses: crazy-max/ghaction-github-pages@v2
+        with:
+          target_branch: gh-pages
+          build_dir: build
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
